--- a/style.css
+++ b/style.css
@@ -6,26 +6,17 @@ body .wrapper {
 
 body .wrapper .pod {
   position: absolute;
-}
-
-body .wrapper .pod.pod-top {
-  height: 45px;
-  width: 250px;
-  border-radius: 100px 100px 0 0;
-  background: green;
-  top: 20px;
-  left: -60px;
+  height: 11em;
+  width: 11em;
+  margin: auto;
+  background: linear-gradient(135deg, #3bab3b 50%, #1c601c 50%);
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  border-radius: 100% 0;
+  position: absolute;
+  top: 0px;
+  left: -30px;
   z-index: -1;
-}
-
-body .wrapper .pod.pod-bottom {
-  height: 55px;
-  width: 250px;
-  border-radius: 0 0 90px 90px;
-  background: #7dae7d;
-  top: 60px;
-  left: -60px;
-  z-index: 3;
 }
 
 body .wrapper .pea {
@@ -37,7 +28,7 @@ body .wrapper .pea {
 
 body .wrapper .pea.pea-left {
   background: #85d585;
-  top: 10px;
+  top: 30px;
   left: -28px;
 }
 
@@ -102,9 +93,19 @@ body .wrapper .pea.pea-left .mouth {
           transform: rotate(-5deg);
 }
 
+body .wrapper .pea.pea-left:after {
+  content: "";
+  background: #1c601c;
+  width: 150px;
+  height: 25px;
+  position: absolute;
+  top: 58px;
+  z-index: 9999;
+}
+
 body .wrapper .pea.pea-right {
   background: #479d47;
-  top: 10px;
+  top: 30px;
   left: 45px;
 }
 
@@ -162,8 +163,7 @@ body .wrapper .pea.pea-right .cheeks.cheek-right {
   left: 62px;
 }
 
-body .wrapper .stem {
-  background-color: #7b1a47;
+body .wrapper .leaf {
   -webkit-border-top-left-radius: 0;
   -webkit-border-top-right-radius: 75px;
   -webkit-border-bottom-left-radius: 75px;
@@ -171,21 +171,37 @@ body .wrapper .stem {
   z-index: 99;
 }
 
-body .wrapper .stem.stem-top {
+body .wrapper .leaf.leaf-top {
   background: #76dc76;
   -webkit-transform: rotate(10deg);
-  top: 20px;
-  left: 135px;
+  top: 40px;
+  left: 128px;
   width: 60px;
   height: 40px;
 }
 
-body .wrapper .stem.stem-bottom {
+body .wrapper .leaf.leaf-bottom {
   background: #369a36;
-  -webkit-transform: rotate(-75deg);
-  top: 52px;
-  left: 128px;
+  -webkit-transform: rotate(-80deg);
+  top: 78px;
+  left: 120px;
   width: 70px;
   height: 50px;
+}
+
+body .wrapper .stem {
+  position: absolute;
+  width: 40px;
+  height: 20px;
+  border-bottom-right-radius: 100px;
+  border-bottom-left-radius: 100px;
+  border-top-right-radius: 40px;
+  border: 10px solid green;
+  border-top: 0;
+  z-index: -9;
+  top: 53px;
+  left: 155px;
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
 }
 /*# sourceMappingURL=style.css.map */
