--- a/style.scss
+++ b/style.scss
@@ -5,24 +5,16 @@ body {
         position: relative;
         .pod {
             position: absolute;
-            &.pod-top {
-                height: 45px;
-                width: 250px;
-                border-radius: 100px 100px 0 0;
-                background:green;
-                top: 20px;
-                left: -60px;
-                z-index: -1;
-            }
-            &.pod-bottom {
-                height: 55px;
-                width: 250px;
-                border-radius: 0 0 90px 90px;
-                background: rgb(125, 174, 125);
-                top: 60px;
-                left: -60px;
-                z-index: 3;
-            }
+            height: 11em;
+            width: 11em;
+            margin: auto;
+            background: linear-gradient(135deg, rgb(59, 171, 59) 50%, rgb(28, 96, 28) 50%);
+            transform: rotate(45deg);
+            border-radius: 100% 0;
+            position: absolute;
+            top: 0px;
+            left: -30px;
+            z-index: -1;
         }
         .pea {
             width: 80px;
@@ -32,7 +24,7 @@ body {
 
             &.pea-left {
                 background: rgb(133, 213, 133);
-                top: 10px;
+                top: 30px;
                 left: -28px;
                 .eyes-close {
                     width: 6px;
@@ -85,10 +77,20 @@ body {
                     left: 32px;
                     transform: rotate(-5deg);
                 }
+
+                &:after {
+                    content: "";
+                    background: rgb(28, 96, 28);
+                    width: 150px;
+                    height: 25px;
+                    position: absolute;
+                    top: 58px;
+                    z-index: 9999;
+                }
             }
             &.pea-right {
                 background: rgb(71, 157, 71);
-                top: 10px;
+                top: 30px;
                 left: 45px;
                 .eyes-open {
                     width: 7px;
@@ -138,30 +140,43 @@ body {
                 }
             }
         }
-        .stem {
-            background-color: rgb(123, 26, 71);
+        .leaf {
             -webkit-border-top-left-radius: 0;
             -webkit-border-top-right-radius: 75px;
             // -webkit-border-bottom-right-radius: 75px;
             -webkit-border-bottom-left-radius: 75px;
             position: absolute;
             z-index: 99;
-            &.stem-top {
+            &.leaf-top {
                 background: rgb(118, 220, 118);
                 -webkit-transform: rotate(10deg);
-                top: 20px;
-                left: 135px;
+                top: 40px;
+                left: 128px;
                 width: 60px;
                 height: 40px;
             }
-            &.stem-bottom {
+            &.leaf-bottom {
                 background: rgb(54, 154, 54);
-                -webkit-transform: rotate(-75deg);
-                top: 52px;
-                left: 128px;
+                -webkit-transform: rotate(-80deg);
+                top: 78px;
+                left: 120px;
                 width: 70px;
                 height: 50px;
             }
+        }
+        .stem {
+            position: absolute;
+            width: 40px;
+            height: 20px;
+            border-bottom-right-radius: 100px;
+            border-bottom-left-radius: 100px;
+            border-top-right-radius: 40px;
+            border: 10px solid green;
+            border-top: 0;
+            z-index: -9;
+            top: 53px;
+            left: 155px;
+            transform: rotate(0deg);
         }
     }
 }
